trying to get the tmux and rose pine theme working together'

--- a/tmux.conf
+++ b/tmux.conf
@@ -9,6 +9,8 @@ set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
+set -g @plugin 'rose-pine/tmux'
+set -g @rose_pine_variant 'main' # Options are 'main', 'moon' or 'dawn'
 
 run '~/.tmux/plugins/tpm/tpm'
 
@@ -20,8 +22,6 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 
-
-set -g @plugin 'lawabidingcactus/tmux-gruvbox-truecolor'
 
 set -g default-terminal "${TERM}"
 
