--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,6 @@
 set-option -as terminal-overrides ",xterm*:RGB"
+set-option -g allow-passthrough on
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
@@ -9,8 +11,24 @@ set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
-set -g @plugin 'rose-pine/tmux'
-set -g @rose_pine_variant 'main' # Options are 'main', 'moon' or 'dawn'
+
+set -g @plugin 'catppuccin/tmux#latest' # See https://github.com/catppuccin/tmux/tags for additional tags
+# set -g @plugin 'catppuccin/tmux' # main branch
+# ...alongside
+
+set -g @catppuccin_flavor 'macchiato' # latte,frappe, macchiato or mocha
+set -g @catppuccin_window_left_separator ""
+set -g @catppuccin_window_right_separator " "
+set -g @catppuccin_window_middle_separator " █"
+set -g @catppuccin_window_number_position "right"
+
+set -g @catppuccin_status_modules_right "directory session"
+set -g @catppuccin_status_left_separator  " "
+set -g @catppuccin_status_right_separator ""
+set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_status_connect_separator "no"
+
+set-option -g status-position bottom
 
 run '~/.tmux/plugins/tpm/tpm'
 
@@ -24,4 +42,5 @@ bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 
 
 set -g default-terminal "${TERM}"
-
+set -g status-bg default
+set -g status-style bg=default
